--- a/css/fanbayzStyles.css
+++ b/css/fanbayzStyles.css
@@ -3701,7 +3701,7 @@ blockquote {
   padding-top: 12px;
   padding-left: 40px;
   padding-right: 40px;
-  font-family: 'Ginger Bread', sans-serif;
+  font-family: 'Clash Display', sans-serif;
   font-size: 16px;
   transition: opacity .2s;
   display: flex;
@@ -10653,26 +10653,40 @@ blockquote {
 
 
 h1,h2,h3,h4,h5,h6, button, strong{
-  font-family: 'Ginger Bread', sans-serif;
+  font-family: 'Clash Display', sans-serif;
+  font-weight: 500;
   
 }
 
+
+
+button{
+  font-family: 'Clash Display', sans-serif !important;
+  font-weight: 500 !important;
+}
+
+.w-button{
+  font-family: 'Clash Display', sans-serif !important;
+  font-weight: 500 !important;
+}
+
 p,span,div, li, a, input{
-  font-family: 'Space Grotesk';
+  font-family: 'Satoshi' ;
 }
 
 .flashy-text{
-  font-family: 'Ginger Bread', sans-serif;
+  font-family: 'Clash Display', sans-serif;
 }
 
 .base-text{
-  font-family: 'Space Grotesk';
+  font-family: 'Satoshi';
 }
 
 .li-text{
   font-size: 16px;
   width: 100%;
   text-align: center;
+  font-family: 'Clash Display', sans-serif;
 }
 
 .invisible-desktop{
@@ -10711,30 +10725,33 @@ p,span,div, li, a, input{
 
 .heText{
 
-  font-family: 'Ginger Bread', sans-serif; 
+  font-family: 'Clash Display', sans-serif; 
   line-height: 160px; 
-  font-size: 150px; 
+  font-size: 120px; 
   margin-top: -20px;
+  font-weight: 500;
 
 }
 
 .heText2{
 
-  font-family: 'Ginger Bread', sans-serif; 
+  font-family: 'Clash Display', sans-serif; 
   line-height: 100px; 
   font-size: 90px; 
   margin-top: -100px;
   margin-bottom: -20px;
+  font-weight: 500;
 
 }
 
 .heText3{
 
-  font-family: 'Ginger Bread', sans-serif; 
-  line-height: 100px; 
-  font-size: 50px;
-  font-weight: 900; 
+  font-family: 'Clash Display', sans-serif; 
+  line-height: 50px; 
+  font-size: 40px;
+  
   margin-top: 10px;
+  font-weight: 600;
 
 }
 
@@ -10745,11 +10762,16 @@ p,span,div, li, a, input{
 
 .catText{
   font-size: 70px;
+  font-weight: 500;
 }
 
 .stHead{
   margin-top: 50px;
   margin-bottom: 30px;
+}
+
+.stHead h3{
+  font-weight: 500;
 }
 
 .bxxo{
@@ -10781,10 +10803,12 @@ p,span,div, li, a, input{
 
 .heText4{
   font-size: 90px;
+  font-weight: 500;
 }
 
 .heText5{
   font-size: 40px;
+  font-weight: 500;
 }
 
 @media (max-width: 768px){
@@ -10828,11 +10852,12 @@ p,span,div, li, a, input{
 
   .heText3{
 
-  font-family: 'Ginger Bread', sans-serif; 
+  font-family: 'Clash Display', sans-serif; 
   line-height: 100px; 
   font-size: 35px; 
   margin-top: -20px;
   margin-bottom: 0px;
+  font-weight: 500;
 
 }
 
@@ -10841,14 +10866,25 @@ p,span,div, li, a, input{
     margin-bottom: 20px;
   }
 
+  .stHead h3{
+    font-weight: 500;
+    font-size: 24px;
+  }
+
+  .xxText{
+    font-size: 36px;
+  }
+
   .catText{
     font-size: 40px;
+    font-weight: 500;
   }
 
   .heText2{
 
-    font-family: 'Ginger Bread', sans-serif; 
-    line-height: 60px; 
+    font-family: 'Clash Display', sans-serif; 
+    line-height: 55px; 
+    font-weight: 500;
     font-size: 50px; 
     margin-top: 10px;
     margin-bottom: -20px;
@@ -10864,8 +10900,9 @@ p,span,div, li, a, input{
 
   .heText{
 
-    font-family: 'Ginger Bread', sans-serif; 
-    line-height: 70px; 
+    font-family: 'Clash Display', sans-serif; 
+    line-height: 70px;
+    font-weight: 500;
     font-size: 60px; 
     margin-top: -20px;
 
@@ -10886,6 +10923,7 @@ p,span,div, li, a, input{
 
   .li-text{
     font-size: 28px;
+    font-family: 'Clash Display', sans-serif;
   }
 
 
